# django-polls_salem_as_package

django-polls_salem/: LICENSE  README.rst  pyproject.toml  setup.cfg
django-polls_salem/django_polls_salem.egg-info/: PKG-INFO  SOURCES.txt
django-polls_salem/polls/: admin.py  models.py  tests.py  urls.py  views.py
django-polls_salem/polls/migrations/: 0001_initial.py
django-polls_salem/polls/static/polls/: style.css
django-polls_salem/polls/templates/polls/: details.html  index.html  results.html
