[metadata]
name = django-polls_salem
version = 0.1
description = A Django app to conduct web-based polls.
long_description = file: README.rst
url = https://www.example.com/
author = Vinoth kumar
author_email = vinothkumararumugam95@gmail.com
license = MIT
classifiers =
          Environment :: Web Environment
          Framework :: Django
          Framework :: Django :: 4.2.4
          Intended Audience :: Developers
          License :: OSI Approved :: MIT License
          Operating System :: OS Independent
          Programming Language :: Python
          Programming Language :: Python :: 3
          Programming Language :: Python :: 3 :: Only
          Programming Language :: Python :: 3.8
          Programming Language :: Python :: 3.9
          Topic :: Internet :: WWW/HTTP
          Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
Django >= 3.2
